cabal-version:       2.2
name:                bhoogle
version:             0.1.4.1
synopsis:            Simple terminal GUI for local hoogle.
description:         bhoogle is a terminal GUI layer over local hoogle. It provides search ahead and sub-string filtering in addition to the usual type-search.
homepage:            https://github.com/andrevdm/bhoogle#readme
license:             BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2018-2022 Andre Van Der Merwe
category:            Development, Terminal
build-type:          Simple
extra-source-files:  README.md

executable bhoogle
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  build-depends:       base >= 4.9.1.0 && <5
                     , protolude
                     , text
                     , bytestring
                     , directory
                     , filepath
                     , containers
                     , brick >= 1.1
                     , vty >= 5.3.6
                     , vector
                     , process
                     , lens
                     , time
                     , hoogle
                     , typed-process
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevdm/bhoogle
