cabal-version:       2.2
name:                bhoogle
version:             0.1.4.4
synopsis:            Simple terminal GUI for local hoogle.
description:         bhoogle is a terminal GUI layer over local hoogle. It provides search ahead and sub-string filtering in addition to the usual type-search.
homepage:            https://github.com/andrevdm/bhoogle#readme
license:             BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2018-2025 Andre Van Der Merwe
category:            Development, Terminal
build-type:          Simple
extra-source-files:  README.md

executable bhoogle
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  build-depends:       base >= 4.9.1.0 && <5
                     , verset >= 0.0.1 && < 0.1
                     --protolude
                     , brick >= 2.1 && < 2.9
                     , bytestring >= 0.12.1 && < 0.13
                     , containers >= 0.6 && < 0.8
                     , directory >= 1.3.8 && < 1.4
                     , filepath >= 1.4 && < 1.6
                     , hoogle >= 5.0 && < 5.1
                     , lens >= 5.3.4 && < 5.4
                     , process >= 1.6.2 && < 1.7
                     , text >= 2.1.1 && < 2.2
                     , time >= 1.12.2 && < 1.15
                     , typed-process >= 0.2.12 && < 0.3
                     , vector >= 0.13.2 && < 0.14
                     , vty >= 6.2 && < 6.5
                     , vty-crossplatform >= 0.4.0 && < 0.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevdm/bhoogle

